--- a/.github/workflows/ccd-plugin-package.yml
+++ b/.github/workflows/ccd-plugin-package.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         python-version: ["3.9"]
         os: [macos-latest, windows-latest, ubuntu-latest]
+        os-name: [MacOS, Windows, Linux]
 
     steps:
     - uses: actions/checkout@v3
@@ -32,7 +33,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
-        name: CCD_Plugin-${{ matrix.os }}.zip
+        name: CCD_Plugin-${{ matrix.os-name }}.zip
         path: CCD_Plugin.zip
   package:
     needs: build
