--- a/.github/workflows/ccd-plugin-package.yml
+++ b/.github/workflows/ccd-plugin-package.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.9"]
-        os: [macos-latest, windows-latest, ubuntu-latest]
+        os: [ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v3
@@ -37,7 +37,7 @@ jobs:
     - name: Upload artifact extlibs by OS
       uses: actions/upload-artifact@v3
       with:
-        path: extlibs_*
+        path: ./extlibs_*.zip
 
   package:
     needs: build
