--- a/.github/workflows/ccd-plugin-package.yml
+++ b/.github/workflows/ccd-plugin-package.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.9", "3.10"]
         os: [macos-latest, windows-latest, ubuntu-latest]
 
     steps:
@@ -27,20 +27,20 @@ jobs:
     - name: Package QGIS Plugin
       run: |
         paver setup
-        paver package
+#        paver package
         paver package_extlibs
    
-    - name: Upload artifact full-plugin by OS
-      uses: actions/upload-artifact@v3
-      with:
-        name: CCD_Plugin_${{ matrix.os }}
-        path: ./CCD_Plugin_*.zip
+#    - name: Upload artifact full-plugin by OS
+#      uses: actions/upload-artifact@v3
+#      with:
+#        name: CCD_Plugin_${{ matrix.os }}
+#        path: ./CCD_Plugin_*.zip
 
     - name: Upload artifact extlibs by OS
       uses: actions/upload-artifact@v3
       with:
-        name: extlibs_${{ matrix.os }}
-        path: ./extlibs_*.zip
+        name: extlibs_${{ matrix.os }}_py${{ matrix.python-version }}
+        path: ./extlibs_*_py${{ matrix.python-version }}.zip
 
   package:
     needs: build
