--- a/.github/workflows/ccd-plugin-package.yml
+++ b/.github/workflows/ccd-plugin-package.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
-        os: [macos-latest, windows-latest, ubuntu-latest]
+        python-version: ["3.10"]
+        os: [windows-latest, ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v3
