--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [tool.pyright]
-extraPaths = [".."]  # include project folder
+extraPaths = ["..", "extlibs"]  # include project folder
 # venv = ".venv"
